# TOFdecomp

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindAliceO2.cmake
src/: CMakeLists.txt  TOFdecomp.cxx  TOFdecomp.h  compressor.cxx  dataFormat.h  decomp.cxx
