if (ENABLE_DECODER_VERBOSE OR ENABLE_VERBOSE)
   add_definitions(-DDECODER_VERBOSE)
endif()
if (ENABLE_CHECKER_VERBOSE OR ENABLE_VERBOSE)
   add_definitions(-DCHECKER_VERBOSE)
endif()
if (ENABLE_ENCODER_VERBOSE OR ENABLE_VERBOSE)
   add_definitions(-DENCODER_VERBOSE)
endif()
if (ALLOW_DRMID)
   add_definitions(-DALLOW_DRMID)
endif()

add_executable(decomp decomp.cxx TOFdecomp.cxx)
target_link_libraries(decomp ${Boost_PROGRAM_OPTIONS_LIBRARY})
install(TARGETS decomp RUNTIME DESTINATION ${CMAKE_SOURCE_DIR}/bin)
